[workspace]
members = [".", "bin"]

[workspace.package]
version = "1.0.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[package]
name = "ws2300"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serialport = "4.6"
serde = "1.0"
serde_derive = "1.0"
